--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,6 @@ section {
 }
 
 form {
-  width: 80vw;
-
   border-radius: 5px;
   background-image: linear-gradient(45deg, #17c0eb, #7158e2);
 
@@ -41,7 +39,6 @@ form {
 
   padding: 2rem;
 
-  font-size: 1rem;
   display: flex;
   flex-direction: column;
 
@@ -121,14 +118,51 @@ form {
 
 .p-item {
   padding: 0.5rem;
+  width: 100%;
+  text-align: center;
+  line-break: anywhere;
+  display: flex;
+  justify-content: center;
+  position: relative;
+
+  min-height: 4rem;
+
+  button {
+
+    position: absolute;
+    right: -1.5rem;
+    bottom: 50%;
+
+    align-items: center;
+
+    max-height: 2rem;
+
+    background-color: #1e272e;
+    color: red;
+
+    border: 1px solid red;
+    border-radius: 5px;
+
+    padding: 0.5rem;
+    cursor: pointer;
+
+    font-size: x-small;
+  }
 }
 
 .modal {
+  resize: both;
+  overflow: hidden;
+
+  font-size: 1rem;
+
+
   width: 30rem;
   height: 20rem;
   background-color: #3ae374;
   border-radius: 5px;
   padding: 1rem;
+
 
   display: flex;
   flex-direction: column;
@@ -139,8 +173,15 @@ form {
 
   justify-content: space-evenly;
 
+  h1 {
+    font-size: 2rem;
+  }
+
   strong {
     border-bottom: 3px solid black;
+    line-break: anywhere;
+    font-size: 2rem;
+
   }
 
   button {
