--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,11 @@ form {
     font-size: 1rem;
     width: 10rem;
   }
+
+  p {
+    padding: 1rem;
+    text-align: center;
+  }
 }
 
 .div-result {
@@ -181,9 +186,7 @@ form {
     border-bottom: 3px solid black;
     line-break: anywhere;
     font-size: 2rem;
-
   }
-
   button {
     width: 20rem;
     height: 5rem;
@@ -197,5 +200,41 @@ form {
     border: 2px solid black;
 
     background-color: #ff3f34;
+  }
+}
+
+.h1-anime {
+  display: flex;
+}
+
+.div {
+  display: flex;
+  div {
+    animation: animeEtc 0.5s ease-in;
+    animation-iteration-count: infinite;
+    background-color: white;
+    height: 5px;
+    width: 5px;
+    position: relative;
+    align-items: center;
+    margin-left: 0.5rem;
+    margin-top: auto;
+    margin-bottom: 0.5rem;
+  
+  }
+}
+
+
+@keyframes animeEtc {
+  from {
+    height: 5px;
+  }
+
+  25% {
+    height: 7px;
+  }
+
+  to {
+    height: 5px;
   }
 }
