Update style and Error message

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ section {
 
 form {
   border-radius: 5px;
-  background-image: linear-gradient(45deg, #17c0eb, #7158e2);
+  background-image: linear-gradient(45deg, #7158e2, #17c0eb);
 
   position: relative;
 
